--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
 <div style="height: 100px;width: 100px;background: pink;margin: 0 auto;"><br>    <a href="#">1234</a><br></div>
 
 
-
 <p><img src="Primers-cern.github.io/img/bg.png" alt="test pic"></p>
+<p><img src="‪E:\Primes\Desk\Wallpapers\1452492583265.jpg" alt="test 2 pic"></p>
 
           
         
