--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 
 <p><img src="Primers-cern.github.io/img/bg.png" alt="test pic"></p>
-<p><img src="‪E:\Primes\Desk\Wallpapers\1452492583265.jpg" alt="test 2 pic"></p>
+<p><img src="../../images/1348666375645.jpg" alt="test 2 pic"></p>
 
           
         
