--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
 <li>first day bulid this,</li>
 <li>Many things to Known.</li>
 </ul>
-<figure class="highlight plain"><table><tr><td class="gutter"><pre><div class="line">1</div><div class="line">2</div><div class="line">3</div><div class="line">4</div><div class="line">5</div><div class="line">6</div><div class="line">7</div><div class="line">8</div><div class="line">9</div><div class="line">10</div><div class="line">11</div><div class="line">12</div><div class="line">13</div><div class="line">14</div><div class="line">15</div></pre></td><td class="code"><pre><div class="line">add a picture</div><div class="line">an some codes</div><div class="line"></div><div class="line">&lt;html&gt;</div><div class="line">&lt;style&gt;</div><div class="line">html &#123;</div><div class="line">	width: 100%;</div><div class="line">&#125;</div><div class="line">&lt;/style&gt;</div><div class="line">&lt;body&gt;</div><div class="line">	&lt;div&gt;</div><div class="line">		emty</div><div class="line">	&lt;/div&gt;</div><div class="line">&lt;/body&gt;</div><div class="line">&lt;/html&gt;</div></pre></td></tr></table></figure>
-<div style="height: 100px;width: 100px;background: pink;margin: 0 auto;"><br>    <a href="#">1234</a><br></div>
-
+<p><style><br>    .test{<br>        height: 100px;<br>        width: 100px;<br>        background: blue;<br>        margin: 0 auto;<br>        text-align: center;<br>    }<br></style></p>
+<p><div class="test"><br>    <a href="#">1234</a><br></div></p>
+<body><br><div class="test"><br>    <a href="#">4577</a><br></div><br></body>
 
 <p><img src="Primers-cern.github.io/img/bg.png" alt="test pic"></p>
 <p><img src="../../images/1348666375645.jpg" alt="test 2 pic"></p>
