--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <li>兼容至IE9（IE9会减少一些动画）</li>
 </ul>
 </li>
-<li><strong>解决问题</strong><ul>
+<li><strong>解决问题</strong>（已更新在<a href="https://github.com/Primers-cern/demo-blog-site" target="_blank" rel="external">项目主页</a>上）<ul>
 <li>滚动网页时，fixed的背景抖动的问题</li>
 <li>edge和chrome下，scrollTop方法对象互不兼容的问题</li>
 <li>窗口变窄后，文字换行导致文段不再垂直居中的问题<br><br></li>
