--- a/index.html
+++ b/index.html
@@ -325,11 +325,16 @@
 <li><strong>解决问题</strong>（已更新在<a href="https://github.com/Primers-cern/demo-blog-site" target="_blank" rel="external">项目主页</a>上）<ul>
 <li>滚动网页时，fixed的背景抖动的问题</li>
 <li>edge和chrome下，scrollTop方法对象互不兼容的问题</li>
-<li>窗口变窄后，文字换行导致文段不再垂直居中的问题<br><br></li>
+<li>窗口变窄后，文字换行导致文段不再垂直居中的问题</li>
+</ul>
+</li>
+<li><strong>后续跟进</strong><ul>
+<li>优化加载性能</li>
+<li>完成更多博客系列页面（文章、相册等），增加完整性</li>
+<li>添加更加完善的响应式优化<br><br><br><img src="../../../../images/个人博客主页制作/1.jpg" alt="响应式效果"><br><img src="../../../../images/个人博客主页制作/GIF.gif" alt="封面进入动画"></li>
 </ul>
 </li>
 </ul>
-<p><img src="../../../../images/个人博客主页制作/GIF.gif" alt="预览图"></p>
 
           
         
