--- a/index.html
+++ b/index.html
@@ -331,10 +331,11 @@
 <li><strong>后续跟进</strong><ul>
 <li>优化加载性能</li>
 <li>完成更多博客系列页面（文章、相册等），增加完整性</li>
-<li>添加更加完善的响应式优化<br><br><br><img src="../../../../images/个人博客主页制作/1.jpg" alt="响应式效果"><br><img src="../../../../images/个人博客主页制作/GIF.gif" alt="封面进入动画"></li>
+<li>添加更加完善的响应式优化<br><br></li>
 </ul>
 </li>
 </ul>
+<p><img src="../../../../images/个人博客主页制作/1.jpg" alt="响应式效果"><br><img src="../../../../images/个人博客主页制作/GIF.gif" alt="封面进入动画"></p>
 
           
         
