--- a/index.html
+++ b/index.html
@@ -1315,8 +1315,8 @@
         .custom-copyRight .icp { margin-left: 10px; color: #999 }
       </style>
       <p class="custom-copyRight">
-        © 2018-2020 primers.top 版权所有
-        <a class="icp" href="http://www.beian.gov.cn/portal/registerSystemInfo?spm=a2107.1.0.0.3e9111d9YoQ6XU&recordcode=8017036">粤ICP备18017036号</a>
+        © 2018-2022 primers.top 版权所有
+        <a class="icp" href="https://beian.miit.gov.cn">粤ICP备18017036号</a>
       </p>
     </footer>
 
